# WinFormPy

./: .gitignore  CHANGELOG.md  IMAGELIST_TODO.md  LICENSE  README.md  pyproject.toml  test_dock.py
examples/: all_system_styles_example.py  anchor_dock_example.py  autolayout_nested_example.py  autosize_example.py  basic_controls_example.py  chat_example.py  console_example.py  containers_example.py  contextmenu_example.py  css_set_controls_example.py  data_grid_crud_example.py  datagridview_example.py  datepickerbox_example.py  datetimepicker_example.py  db_connection_example.py  dialogs_example.py  dock_anchor_example.py  document_viewer_example.py  dotnet2_controls_example.py  email_example.py  groupbox_autosizemode_radiobutton_example.py  hierarchical_visibility_example.py  imagelist_comprehensive_example.py  imagelist_example.py  imagelist_example_old.py  layout_manager_example.py  layouts_example.py  listbox_checkedlistbox_example.py  listview_example.py  login_example.py  maskedtextbox_example.py  master_detail_example.py  maui_example.py  mdi_example.py  menustrip_example.py  monthcalendar_example.py  more_controls_example.py  picturebox_example.py  printersettings_example.py  professional_form_example.py  (+15 more)
guides/: README_Autosize.md  README_Autosize_Pack_Vs_Place.md  README_Container_Best_Practice.md  README_Dock_Anchor.md  README_GroupBox.md  README_Labelframe_Container.md  README_MAUI.md  README_MDI.md  README_MaskedTextBox.md  README_Naming.md  README_PrinterSettings.md  README_Statusbar_Guide.md  README_WinUI3.md  README_Windows_Forms_Layout_Emulation.md  (+3 more)
(+83 files in other folders)
